--- a/html/style.css
+++ b/html/style.css
@@ -3,80 +3,206 @@
 title {
     text-align: center;
 }
-
+html, body {
+    height: 100%;
+    margin: 0;
+}
 body {
     background-color: #2D2A26;
     color: #ffffff;
     margin: 0 auto;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:1em;
+}
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.hotel-details-row {
+    background-color: #afafaf; 
+    color:#000000
 }
 
+.detail-group {
+    background-color: rgb(61, 61, 61); 
+    color:#ffffff;
+}
 
+.no-data {
+    background-color: #afafaf; 
+    color:#000000;
+    height: 50px;
+    text-align: center;
+    font-weight:bold;
+    font-size: 1em;
+}
 a:link, a:visited, a:active {
     color: rgb(255, 255, 255);
   }
-  
 
-  
-  /* mouse over link */
+  .footer {
+    display: flex;
+    justify-content: center; /* Distribute items evenly along the main axis */
+    align-items: center; /* Center items vertically */
+}
+.footer-content {
+    margin-right: 20px;
+    margin-bottom: 10px; /* Adjust spacing between sections */
+}
+
   a:hover {
     color: hotpink;
   }
-  
-  
+#portal_url_tip {
+    white-space: normal;
+    width:70%;
+    word-wrap: break-word
+}
+.main-container {
+    flex: 1;
+}
+.container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    
+}
+.alerts-container {
+    display: flex;
+    width:100%; 
+    justify-content: center;
+    align-items: center;
+}
+.column {
+   
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+   
+}
+.column-two {
+    width:30%;
+    padding: 10px;
+    justify-content: center;
+    align-items: center; 
+    
+ 
+}
+
+.alert-column {
+    width:100%;
+    justify-content: center;
+    align-items: center;  
+}
+
+.row {
+    flex: 1;
+    width: 100%;
+    justify-content: left;
+    align-items: left;   
+    
+}
 
 *,
-*::after,
-*::before {
+* {
   margin: 0;
   padding: 0;
 }
-#container {
+
+.wording {
+    margin-top: 15px;
+    font-weight:bold;
     
-    width:100%;
-   
-    padding-top:25px;
 }
 
+#TimeStamp {
+    color: #F1AD34;
+}
+table {
+    color:#000;
+    border: none;
+}
+tbody + tbody::before {
+	content: "";
+	height: 10px;
+    border: none;
+	display: table-row;
+
+}
 .table-stuff {
     display:flex;
     justify-content: center;
 }
+.button {
+    display:flex;
+    justify-content: left;
+    padding-bottom:15px;
+}
+button {
+    background-color: #1f5b9a; 
+    border: none;
+    color: rgb(255, 255, 255);
+    padding: 10px 25px;
+    border-radius: 4px;
+    text-align: center;
+    font-weight:bold;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1em;
+  }
+.unavailable {
+    background-color: #989898;
+}
+th, td {
+    padding: 7px;
+    border: none;
+}
+
+th {border: none;
+    font-weight:bold;
+    
+}
+tr {border: none;
+    height:30px;
+  
+}
+
 header {
   display: flex;
   align-items: center;
   color: #000;
   flex-wrap: wrap;
   justify-content: center;
-  font-size: 2em;
+  font-size: 2.25em;
   font-weight:bold;
+  word-wrap: break-word;
   background-color: #ffffff;
   padding: 17px; 
   height: 50px;
  
 }
 .expand-indicator {
-    float: left; /* Align the indicator to the right side */
+    float: left; 
 }
 .hotels {
     padding-top: 15px;
 }
 #Gencon-Hotels {
-    width: 700px; /* Adjust the width as needed */
+    width: 850px; 
 }
-    /* Define fixed widths for each column */
-
+    
 div.center {
     text-align: center;
 }
-/* Define specific widths for each column */
+
 #Gencon-Hotels th:nth-child(1),
 #Gencon-Hotels td:nth-child(1) {
-    width: 35%; /* Room Name column width */
+    width: 40%; 
 }
 #Gencon-Hotels th:nth-child(2),
 #Gencon-Hotels td:nth-child(2) {
-    width: 15%; /* Rate column width */
+    width: 12%; 
 }
 #Gencon-Hotels th:nth-child(3),
 #Gencon-Hotels th:nth-child(4),
@@ -88,9 +214,127 @@ div.center {
 #Gencon-Hotels td:nth-child(5),
 #Gencon-Hotels td:nth-child(6),
 #Gencon-Hotels td:nth-child(7) {
-    width: 10%; /* We, Th, Fr, Sa, Su column width */
+    width: 8%; 
 }
 
 thead {
     text-align:left;
+    background-color: #F1AD34;
+    color: #000000;
+}
+
+.button-updated {
+    display: none;
+}
+.hotel-name {
+    background-color: #ffffff; 
+    color: #000000; 
+    font-weight: bold;
+}
+@media (max-width: 767px) {
+    .container {
+        flex-direction: column; /* Change flex direction to stack columns */
+    }
+    .button-updated {
+        display: contents;
+    }
+    .column-two {
+        width: 100%; /* Take full width */
+    }
+
+    .alerts-container {
+        flex-direction: column; /* Stack items vertically */
+    }
+
+    .row {
+        margin-top: 15px; /* Add margin to create space between the table and the content */
+    }
+
+    .footer {
+        flex-direction: column; /* Stack footer content vertically */
+        align-items: center; /* Align items to center */
+    }
+    #Gencon-Hotels thead {
+        display: none;
+    }
+    #Gencon-Hotels td:nth-child(1) {
+        text-align: left;
+        width: 100%; 
+    }
+    header {
+        padding: 10px; 
+        height: auto; 
+        word-wrap: break-word; 
+    }
+    #Gencon-Hotels th:nth-child(2),
+    #Gencon-Hotels td:nth-child(2) {
+        width: 100%; 
+        text-align: left;
+    }
+    #Gencon-Hotels th:nth-child(3),
+    #Gencon-Hotels th:nth-child(4),
+    #Gencon-Hotels th:nth-child(5),
+    #Gencon-Hotels th:nth-child(6),
+    #Gencon-Hotels th:nth-child(7),
+    #Gencon-Hotels td:nth-child(3),
+    #Gencon-Hotels td:nth-child(4),
+    #Gencon-Hotels td:nth-child(5),
+    #Gencon-Hotels td:nth-child(6),
+    #Gencon-Hotels td:nth-child(7) {
+        text-align: left;
+        width: 100%; 
+    }
+   
+    tbody + tbody::before {
+        display: table-row;
+        height: 20px;
+        margin:0;
+    }
+
+ 
+ 
+    td.hotel-name {
+        width: 100%; 
+        text-align: left; 
+        font-weight: bold;
+       
+        display: table-cell; 
+    }
+    .wording {
+        display: none;
+    }
+    
+    table tbody tr td {
+        display: block;
+        width: 100%; 
+    }
+
+
+    table tbody tr td::before {
+        content: attr(data-label);
+        float: left;
+        font-weight: bold;
+        text-transform: uppercase;
+        width: 50%; 
+        box-sizing: border-box; 
+        padding-right: 5px; 
+    }
+
+    
+    table tbody tr td:not(:first-child) {
+        float: right; 
+        text-align: left; 
+        width: 50%; 
+        box-sizing: border-box; 
+        padding-left: 5px; 
+    }
+    table tbody tr td:first-child {
+        float: right; 
+        text-align: left; 
+        width: 50%; 
+        box-sizing: border-box; 
+        padding-left: 5px; 
+    }
+
+
 }
